--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tic Tac Toe</title>
 
     <!-- CSS file -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     </div>
 
     <!-- JS file -->
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
